--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,176 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ttt.jeegnathebug.tictactoe.MainActivity"
-    android:orientation="horizontal">
+    android:fitsSystemWindows="true"
+    tools:context="com.jeegnathebug.tttjeegna.MainActivity">
 
-    <TableLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="80"
-        android:id="@+id/tableLayout">
-        <TableRow
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="33">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton1"
-                android:layout_column="0"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true"
-                />
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton2"
-                android:layout_column="1"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton3"
-                android:layout_column="2"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="33">
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton4"
-                android:layout_column="0"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton5"
-                android:layout_column="1"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton6"
-                android:layout_column="2"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="33">
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton7"
-                android:layout_column="0"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton8"
-                android:layout_column="1"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="33"
-                android:id="@+id/imageButton9"
-                android:layout_column="2"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
-        </TableRow>
-    </TableLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="20">
-        <Button
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="15"
-            android:text="@string/button_restart"
-            android:id="@+id/button"
-            android:layout_column="0"
-            android:onClick="restartGame"/>
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="15"
-            android:text="@string/button_versus"
-            android:id="@+id/button2"
-            android:layout_column="1"
-            android:onClick="changeGameMode" />
+    </android.support.design.widget.AppBarLayout>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="15"
-            android:text="@string/button_reset_scores"
-            android:id="@+id/button3"
-            android:layout_column="2"
-            android:onClick="resetScores" />
+    <include layout="@layout/content_main" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="15"
-            android:text="@string/button_scores"
-            android:id="@+id/button4"
-            android:layout_column="3"
-            android:onClick="scores" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="15"
-            android:text="@string/button_about"
-            android:id="@+id/button5"
-            android:layout_column="3"
-            android:onClick="about" />
-
-        <TextView
-            android:text="@string/PvE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView1"/>
-    </LinearLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
