--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ttt.jeegnathebug.tictactoe.MainActivity"
+    tools:context="com.jeegnathebug.tttjeegna.MainActivity"
     tools:showIn="@layout/activity_main"
     android:orientation="vertical">
 
@@ -160,15 +160,6 @@
             android:id="@+id/button4"
             android:layout_column="3"
             android:onClick="scores" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="20"
-            android:text="@string/button_about"
-            android:id="@+id/button5"
-            android:layout_column="3"
-            android:onClick="about" />
     </LinearLayout>
 
     <TextView
