--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,7 +20,7 @@
         android:layout_weight="80"
         android:id="@+id/tableLayout">
         <TableRow
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="33">
 
@@ -54,7 +54,7 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="33">
 
@@ -87,7 +87,7 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="33">
 
@@ -128,7 +128,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="20"
+            android:layout_weight="25"
             android:text="@string/button_restart"
             android:id="@+id/button"
             android:layout_column="0"
@@ -137,7 +137,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="20"
+            android:layout_weight="25"
             android:text="@string/button_versus"
             android:id="@+id/button2"
             android:layout_column="1"
@@ -146,7 +146,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="20"
+            android:layout_weight="25"
             android:text="@string/button_reset_scores"
             android:id="@+id/button3"
             android:layout_column="2"
@@ -155,7 +155,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="20"
+            android:layout_weight="25"
             android:text="@string/button_scores"
             android:id="@+id/button4"
             android:layout_column="3"
