--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -121,6 +121,7 @@
     </TableLayout>
 
     <LinearLayout
+        android:gravity="center"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -128,43 +129,31 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="25"
             android:text="@string/button_restart"
-            android:id="@+id/button"
-            android:layout_column="0"
+            android:id="@+id/buttonRestart"
             android:onClick="restartGame"/>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="33"
             android:layout_height="match_parent"
-            android:layout_weight="25"
             android:text="@string/button_versus"
-            android:id="@+id/button2"
-            android:layout_column="1"
+            android:id="@+id/buttonVersus"
             android:onClick="changeGameMode" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="25"
-            android:text="@string/button_reset_scores"
-            android:id="@+id/button3"
-            android:layout_column="2"
-            android:onClick="resetScores" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="25"
             android:text="@string/button_scores"
-            android:id="@+id/button4"
-            android:layout_column="3"
+            android:id="@+id/buttonScores"
             android:onClick="scores" />
     </LinearLayout>
 
     <TextView
+        android:textAlignment="center"
+        android:gravity="center"
         android:text="@string/PvE"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView1"
         android:layout_weight="5" />
