--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -156,6 +156,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="25"
-        android:id="@+id/textView1"/>
+        android:id="@+id/textViewVersus"/>
 </LinearLayout>
 </LinearLayout>
