--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -155,6 +155,6 @@
         android:text="@string/PvE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1"
+        android:id="@+id/textViewVersus"
         android:layout_weight="5" />
 </LinearLayout>
