--- a/app/src/main/res/layout-land/activity_score.xml
+++ b/app/src/main/res/layout-land/activity_score.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:text="@string/scoreTitle"
+        android:text="@string/score_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -18,7 +18,7 @@
         android:id="@+id/textViewScoreTitle" />
 
     <TextView
-        android:text="@string/scorePlayer1"
+        android:text="@string/score_player1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -26,7 +26,7 @@
         android:id="@+id/textViewScorePlayer1" />
 
     <TextView
-        android:text="@string/scorePlayer2"
+        android:text="@string/score_player2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -34,7 +34,7 @@
         android:id="@+id/textViewScorePlayer2" />
 
     <TextView
-        android:text="@string/scoreComputer"
+        android:text="@string/score_computer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -42,7 +42,7 @@
         android:id="@+id/textViewScoreComputer" />
 
     <TextView
-        android:text="@string/scoreTies"
+        android:text="@string/score_ties"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
