--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -145,7 +145,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="25"
-        android:text="@string/button_scores"
+        android:text="@string/score_title"
         android:id="@+id/buttonScores"
         android:onClick="scores" />
 
