--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -144,7 +144,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/button_scores"
+            android:text="@string/score_title"
             android:id="@+id/buttonScores"
             android:onClick="scores" />
     </LinearLayout>
