--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:baselineAligned="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,150 +13,148 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jeegnathebug.tttjeegna.MainActivity"
     android:orientation="horizontal"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:id="@+id/main_content">
 
-<TableLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="80"
-    android:id="@+id/tableLayout">
-    <TableRow
+    <TableLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="33">
+        android:layout_height="match_parent"
+        android:layout_weight="80"
+        android:id="@+id/tableLayout">
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton1"
-            android:layout_column="0"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true"
-            />
+        <TableRow
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="33">
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton2"
-            android:layout_column="1"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton1"
+                android:layout_column="0"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton3"
-            android:layout_column="2"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
-    </TableRow>
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton2"
+                android:layout_column="1"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
 
-    <TableRow
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton3"
+                android:layout_column="2"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="33">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton4"
+                android:layout_column="0"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton5"
+                android:layout_column="1"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton6"
+                android:layout_column="2"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="33">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton7"
+                android:layout_column="0"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton8"
+                android:layout_column="1"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="33"
+                android:id="@+id/imageButton9"
+                android:layout_column="2"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+        </TableRow>
+    </TableLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="33">
+        android:layout_height="match_parent"
+        android:layout_weight="20">
 
-        <ImageButton
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton4"
-            android:layout_column="0"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
+            android:layout_height="wrap_content"
+            android:text="@string/button_restart"
+            android:id="@+id/buttonRestart"
+            android:onClick="restartGame" />
 
-        <ImageButton
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton5"
-            android:layout_column="1"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
+            android:layout_height="wrap_content"
+            android:text="@string/button_versus"
+            android:id="@+id/buttonVersus"
+            android:onClick="changeGameMode" />
 
-        <ImageButton
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton6"
-            android:layout_column="2"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
-    </TableRow>
+            android:layout_height="wrap_content"
+            android:text="@string/score_title"
+            android:id="@+id/buttonScores"
+            android:onClick="scores" />
 
-    <TableRow
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="33">
-
-        <ImageButton
+        <TextView
+            android:textAlignment="center"
+            android:gravity="center"
+            android:text="@string/PvE"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton7"
-            android:layout_column="0"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
-
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton8"
-            android:layout_column="1"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
-
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="33"
-            android:id="@+id/imageButton9"
-            android:layout_column="2"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
-    </TableRow>
-</TableLayout>
-
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="20">
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="25"
-        android:text="@string/button_restart"
-        android:id="@+id/buttonRestart"
-        android:onClick="restartGame"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="25"
-        android:text="@string/button_versus"
-        android:id="@+id/buttonVersus"
-        android:onClick="changeGameMode" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="25"
-        android:text="@string/score_title"
-        android:id="@+id/buttonScores"
-        android:onClick="scores" />
-
-    <TextView
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="@string/PvE"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="25"
-        android:id="@+id/textViewVersus"/>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewVersus" />
+    </LinearLayout>
 </LinearLayout>
