--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_about"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +16,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:padding="5dp"
-        android:id="@+id/textViewAboutTitle"/>
+        android:id="@+id/textViewAboutTitle" />
 
     <TextView
         android:text="@string/about_text"
