--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -34,7 +34,8 @@
                 android:id="@+id/imageButton1"
                 android:layout_column="0"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -43,7 +44,8 @@
                 android:id="@+id/imageButton2"
                 android:layout_column="1"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -52,7 +54,8 @@
                 android:id="@+id/imageButton3"
                 android:layout_column="2"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
         </TableRow>
 
         <TableRow
@@ -67,7 +70,8 @@
                 android:id="@+id/imageButton4"
                 android:layout_column="0"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -76,7 +80,8 @@
                 android:id="@+id/imageButton5"
                 android:layout_column="1"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -85,7 +90,8 @@
                 android:id="@+id/imageButton6"
                 android:layout_column="2"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
         </TableRow>
 
         <TableRow
@@ -100,7 +106,8 @@
                 android:id="@+id/imageButton7"
                 android:layout_column="0"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -109,7 +116,8 @@
                 android:id="@+id/imageButton8"
                 android:layout_column="1"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -118,7 +126,8 @@
                 android:id="@+id/imageButton9"
                 android:layout_column="2"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/blank" />
         </TableRow>
     </TableLayout>
 
