--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -38,7 +38,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="0dp"
@@ -51,7 +52,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="0dp"
@@ -64,7 +66,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
         </TableRow>
 
         <TableRow
@@ -85,7 +88,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="0dp"
@@ -98,7 +102,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="0dp"
@@ -111,7 +116,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
         </TableRow>
 
         <TableRow
@@ -132,7 +138,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="0dp"
@@ -145,7 +152,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
 
             <ImageButton
                 android:layout_width="0dp"
@@ -158,7 +166,8 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false"
                 android:layout_margin="3dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:background="@drawable/blank" />
         </TableRow>
     </TableLayout>
 
@@ -196,5 +205,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textViewVersus" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewPlayerTurn"
+            android:textAlignment="center" />
     </LinearLayout>
 </LinearLayout>
